Fix layout issues

--- a/frontend/src/styles/dashboard.css
+++ b/frontend/src/styles/dashboard.css
@@ -4,12 +4,11 @@
   display: grid;
   grid-template-columns: 80% 20%;
   gap: 2rem;
-  height: calc(100vh - 70px);
   background-image: url("/images/dashboard/Dashbord.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  overflow: hidden;
+  height: 100%;
 }
 
 .main-content::before {
